--- a/application-task.yml
+++ b/application-task.yml
@@ -1,1 +1,40 @@
+server:
+  port: 9092
+  
+spring:
+  application:
+    name: task-service
+  datasource:
+    url: jdbc:postgresql://postgres:5432/mini_project_db
+    username: postgres
+    password: admin
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
+openapi:
+  service:
+    title: Keycloak Admin Client Doc
+    version: 1.0.0
+    url: http://localhost:9090
+
+springdoc:
+  api-docs:
+    path: /task-service/v3/api-docs
+  swagger-ui:
+    path: /task-service/swagger-ui.html
+    
+management:
+  tracing:
+    sampling:
+      probability: 1.0
