--- a/gateway.yml
+++ b/gateway.yml
@@ -26,6 +26,11 @@ spring:
               args:
                 strategy: RETAIN_FIRST
 
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
