--- a/keycloak-admin-client.yml
+++ b/keycloak-admin-client.yml
@@ -28,7 +28,7 @@ springdoc:
       client-secret: ZUBxXkJYEMkNWZDhBf6dEyua90e1QdpK
 
 keycloak:
-  auth-server-url: http://localhost:8080/auth
+  auth-server-url: http://localhost:8080
   realm: Mini-Project
   clientId: Mini-Project
   clientSecret: ZUBxXkJYEMkNWZDhBf6dEyua90e1QdpK
