--- a/task-service.yml
+++ b/task-service.yml
@@ -2,6 +2,11 @@ server:
   port: 9092
 
 spring:
+  security:
+    oauth2:
+      resource-server:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/Mini-Project
   application:
     name: task-service
   datasource:
@@ -17,28 +22,12 @@ spring:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-
-openapi:
-  service:
-    title: Task Service API
-    version: 1.0.0
-    url: http://localhost:9090
-
 springdoc:
   api-docs:
     path: /task-service/v3/api-docs
   swagger-ui:
     path: /task-service/swagger-ui.html
-
-management:
-  tracing:
-    sampling:
-      probability: 1.0
-logging:
-  level:
-    root: DEBUG
+    oauth:
+      client-id: Mini-Project
+      client-secret: ZUBxXkJYEMkNWZDhBf6dEyua90e1QdpK
 
