--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -4,6 +4,8 @@ spring:
   main:
     web-application-type: reactive
   cloud:
+    config:
+      uri: http://localhost:8888
     gateway:
       httpclient:
         connect-timeout: 20000
