--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -12,7 +12,11 @@ spring:
         - id: keycloak-admin-client
           uri: lb://KEYCLOAK-ADMIN-CLIENT
           predicates:
-            - Path=/api/v1/user/**, /api/v1/group/**, /keycloak-admin-client/v3/api-docs
+            - Path=/api/v1/user/**, /keycloak-admin-client/v3/api-docs
+        - id: keycloak-admin-client-group
+          uri: lb://KEYCLOAK-ADMIN-CLIENT
+          predicates:
+            - Path=/api/v1/group/**, /keycloak-admin-client/v3/api-docs
         - id: task-service
           uri: lb://TASK-SERVICE
           predicates:
