--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -12,8 +12,7 @@ spring:
         - id: keycloak-admin-client
           uri: lb://KEYCLOAK-ADMIN-CLIENT
           predicates:
-            - Path=/api/v1/user/**, /keycloak-admin-client/v3/api-docs
-            - Path=/api/v1/group/**, /keycloak-admin-client/v3/api-docs
+            - Path=/api/v1/user/**, /api/v1/group/**, /keycloak-admin-client/v3/api-docs
         - id: task-service
           uri: lb://TASK-SERVICE
           predicates:
