--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -5,6 +5,16 @@ spring:
     web-application-type: reactive
   cloud:
     gateway:
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "*"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - OPTIONS
       httpclient:
         connect-timeout: 20000
         response-timeout: 10s
