--- a/keycloak-admin-client.yml
+++ b/keycloak-admin-client.yml
@@ -11,7 +11,8 @@ keycloak:
   auth-server-url: http://localhost:8080
   realm: Mini-Project
   clientId: Mini-Project
-  clientSecret: HC3neQnSa1iDHx37zR66kPxPLdKpGHiY
+#  clientSecret: HC3neQnSa1iDHx37zR66kPxPLdKpGHiY
+  clientSecret: lQwAAOOHnMBT7PosqbphOnz1KM5f9hsA
 
 springdoc:
   api-docs:
@@ -20,4 +21,4 @@ springdoc:
     path: /keycloak-admin-client/swagger-ui.html
     oauth:
       client-id: Mini-Project
-      client-secret: HC3neQnSa1iDHx37zR66kPxPLdKpGHiY
+      client-secret: lQwAAOOHnMBT7PosqbphOnz1KM5f9hsA
